testsuite/tests/typing-layouts-products/unboxed_records_disabled.compilers.reference
File "unboxed_records.ml", line 50, characters 0-34:
50 | type ints = #{ x : int ; y : int }
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This construct requires the stable version of the extension "layouts", which is disabled and cannot be used
